@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getVehicleRepository()
}

class RegisterVehicleController {
    + RegisterVehicleController(vehicleRepository)
    + registerVehicle(plateNumber, brand, model, type, tare, grossWeight, currentKms, registrationDate, acquisitionDate, serviceFrequency)
}

class vehicleRepository{
    + registerVehicle(plateNumber, brand, model, type, tare, grossWeight, currentKms, registrationDate, acquisitionDate, serviceFrequency)
    + addVehicle(vehicle)
    + validateVehicle(vehicle)
    + getVehicleList()
}

class RegisterVehicleUI {
}

class Vehicle{
    - String plateNumber
    - String brand
    - String model
    - String type
    - Double tare
    - Double grossWeight
    - Double currentKms
    - String registrationDate
    - String acquisitionDate
    - Double serviceFrequency
    - Double kmAtLastMaintenance

}

Repositories -> Repositories : instance

RegisterVehicleUI .> RegisterVehicleController
RegisterVehicleController .> "1" vehicleRepository : vehicleRepository


Repositories --> "1" vehicleRepository

RegisterVehicleController .> Repositories : repositories

vehicleRepository "1" o--- "1..*"Vehicle : has


@enduml